# omega-edit

./: .buildinfo  .clang-format  .cpack_ignore  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .lgtm.yaml  .lgtm.yml  .npmignore  .scalafmt.conf  AGENTS.md  CHANGELOG-OPTIMIZER.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  Doxyfile.docs  FindBZip2.cmake  FindBoost.cmake  FindIconv.cmake  FindZLIB.cmake  Findlibbacktrace.cmake  Makefile  NOTICE.txt  README  README.md  SHORTCOMINGS.md  UPGRADE-v1-to-v2.md  VERSION_MANAGEMENT.md  binding.gyp  biome.json  buf.gen.yaml  buf.yaml  build.ps1  build.sbt  (+25 more)
core/: CMakeLists.txt
core/cmake/: features.h.in
core/packaging/: CMakeLists.txt  omega_editConfig.cmake
core/sphinx/: conf.py  index.rst
core/src/examples/: add_bom.cpp  apply_script.cpp  count_characters.c  detect_bom.c  peek.cpp  play.cpp  plugin_replace.c  profile.c  replace.cpp  replay.cpp  rotate.cpp  search.cpp  simple.cpp  simple_c.c  slice.cpp  transform.c
core/src/include/: omega_edit.h
core/src/include/omega_edit/: byte.h  change.h  changelog.h  character_counts.h  check.h  config.h  edit.h  encode.h  export.h  features.h  filesystem.h  fwd_defs.h  license.h  search.h  segment.h  session.h  stl_string_adaptor.hpp  transform.h  transform_plugin_sdk.h  utility.h  version.h  viewport.h  visit.h
core/src/include/omega_edit/plugins/: replace.h
core/src/lib/: change.cpp  changelog.cpp  character_counts.c  check.cpp  edit.cpp  encode.c  filesystem.cpp  license.c  payload_storage.cpp  search.cpp  segment.cpp  session.cpp  stl_string_adapter.cpp  stl_string_adaptor.cpp  transform.cpp  utility.c  version.c  viewport.cpp  visit.cpp
core/src/lib/impl_/: change_def.hpp  character_counts_def.h  data_def.hpp  edit_private_helpers.hpp  find.cpp  find.h  internal_fun.cpp  internal_fun.hpp  internal_fwd_defs.hpp  macros.h  model_def.hpp  model_segment_def.hpp  safe_math.hpp  search_context_def.h  session_def.hpp  viewport_def.hpp
core/src/lib/plugins/: replace.c
core/src/plugins/: checksum8.c  fnv1a64.c  repeat.c  xor.c  xor_ff.c  zlib_compress.c  zlib_decompress.c
core/src/tests/: CMakeLists.txt  brutal_coverage_tests.cpp  changelog_tests.cpp  differential_fuzz_tests.cpp  edge_case_tests.cpp  encode_tests.cpp  filesystem_tests.cpp  generate_file.cpp  harness_tests.cpp  omegaEdit_tests.cpp  omega_test.cpp  process_isolation_plugin.c  process_isolation_tests.cpp  project_info_tests.cpp  session_tests.cpp  test_harness.hpp  test_util.h  test_util.hpp  test_util.hpp.in  undo_benchmark.cpp  utility_tests.cpp  viewport_stress_tests.cpp
core/src/tests/data/: utf-16be_1.txt  utf-32le_1.txt  utf-8bom_1.txt
core/src/tools/: transform_plugin_host.cpp
packaging/: .cpack_ignore  CMakeLists.txt  Makefile  cmake_install.cmake  omega_editConfig.cmake  omega_editConfigVersion.cmake
plugins/: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py
plugins/cmake/: FetchCLD3.cmake  FetchProtobuf.cmake
plugins/src/: and.c  base64.c  base64_decode.c  base64_encode.c  bitmask_options.h  bitwise.c  blake2b512.c  blake2s256.c  c_plugin_options.h  case_change.c  character_transcode.cpp  checksum8.c  common_checksums.cpp  content_type.cpp  decimal_codecs.cpp  endian_swap.cpp  fnv1a64.c  format_inspectors.cpp  language.cpp  md5.c  openssl_ciphers.c  openssl_digest_plugin.h  openssl_digests.c  or.c  plugin_options.hpp  record_text_helpers.cpp  repeat.c  sha1.c  sha224.c  sha256.c  sha384.c  sha3_256.c  sha3_512.c  sha512.c  text_codecs.cpp  xor.c  zlib.c  zlib_compress.c  zlib_decompress.c  zstd.c
plugins/tests/: test_util.hpp.in  transform_plugin_tests.cpp
plugins/tools/: transform_plugin_harness.cpp
server/cpp/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
server/cpp/cmake/: FetchCLD3.cmake
server/cpp/src/: cld3_language_detector.cpp  content_detection.cpp  content_detection.h  editor_service.cpp  editor_service.h  libmagic_content_detector.cpp  main.cpp  session_manager.cpp  session_manager.h  stub_content_detector.cpp
src/bindings/javascript/: CMakeLists.txt
src/examples/: CMakeLists.txt  omega_copy.js  omega_functions.js  omega_license.js  omega_replace.js  omega_simple.js  omega_slice.js  omega_version.js  peek.cpp  play.cpp  profile.c  replace.cpp  replay.cpp  rotate.cpp  search.cpp  simple.cpp  simple_c.c  slice.cpp  transform.c
src/examples/cmake/: conan.cmake
src/rpc/: CMakeLists.txt  server.cpp  server_cbk.cpp  server_test.cpp
src/rpc/client/ts/: .gitignore  .npmignore  .prettierignore  README.md  compile-proto.bat  compile-proto.sh  logconf.xml  package-lock.json  package.json  runTests.ts  tsconfig.json  typedoc.json
src/rpc/client/ts/scripts/: package.ts
src/rpc/client/ts/src/: change.d.ts  change.ts  client.ts  dataMan.ts  index.ts  logger.ts  server.d.ts  server.ts  session.d.ts  session.ts  settings.d.ts  settings.ts  version.d.ts  version.ts  viewport.d.ts  viewport.ts
src/rpc/client/ts/tests/: .eslintrc.yml  fixtures.ts  package-lock.json  package.json  tsconfig.json
src/rpc/protos/: omega_edit.proto
src/rpc/server/cpp/: server.cpp  server_cbk.cpp
src/rpc/server/cpp/tests/: server_test.cpp
src/rpc/server/cpp/worker_queue/: worker_queue.cpp  worker_queue.hpp
src/rpc/server/scala/: .scalafmt.conf  README.md  build.sbt
src/rpc/server/scala/ci/: release.sbt
src/rpc/server/scala/project/: BuildSupport.scala  Rat.scala  build.properties  (+1 more)
src/rpc/tests/: server_test.cpp
src/rpc/worker_queue/: worker_queue.cpp
src/tests/: CMakeLists.txt  catch.hpp  generate_file.cpp  omega_test.cpp  play.cpp  replay.cpp  test_util.h
src/tests/integration/: CMakeLists.txt  generate_file.cpp  omega_test.cpp  test_util.h
src/tests/integration/data/: test1.dat.seg.expected
tests/: CMakeLists.txt  catch.hpp  omega_test.cpp  peek.cpp  play.cpp  replay.cpp  rotate.cpp  slice.cpp  test_util.h  test_utils.h
tests/data/: model-test.expected.5.txt  model-test.expected.7.txt  search-test.expected.1.txt  search-test.txt
(+1706 files in other folders)
